--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.4.6", features = ["derive"] }
-rust-ini = "0.19"
 dirs = "5.0.1"
+serde_json = "1.0.108"
