--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,4 @@ clap = { version = "4.4.6", features = ["derive"] }
 colored = "2.0.4"
 dirs = "5.0.1"
 regex = "1.10.2"
-serde_json = "1.0.108"
+serde_json = { version = "1.0.108", features = ["preserve_order"] }
