--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2021"
 clap = { version = "4.4.6", features = ["derive"] }
 colored = "2.0.4"
 dirs = "5.0.1"
+lazy_static = "1.4.0"
 regex = "1.10.2"
 serde_json = "1.0.108"
